[package]
name = "redisgo"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["Mohamad Al zohbie <alzoubi528@gmail.com>"]
description = "A simple and ergonomic Redis client wrapper for Rust"
documentation = "https://docs.rs/redisgo"
homepage = "https://github.com/mohamadzoh/redisgo"
repository = "https://github.com/mohamadzoh/redisgo"
readme = "README.md"
keywords = ["redis", "cache", "database", "client", "async"]
license = "MIT OR Apache-2.0"
categories = ["database", "caching"]
exclude = [
    ".github/*",
    ".gitignore",
    "benches/*",
    "tests/*",
]

[lib]
name = "redisgo"
path = "src/lib.rs"

[dependencies]
redis = "1.0.5"

[dev-dependencies]
criterion = "0.8.2"


# add benchmarks
[[bench]]
name = "bench"
harness = false